--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="syle.css">
 </head>
 <body>
-    <button id="start-record">Start Recording</button>
-    <button id="stop-record">Stop Recording</button>
+  <div class="controls">
+    <button class="btn" id="start-record">Start Recording</button>
+    <button class="btn" id="stop-record">Stop Recording</button>
+  </div>
     <script src="./popup.js" type="module"></script>
 </body>
 </html>
